--- a/MusicStore/PresentationLayer/pgCustomerDetails.xaml
+++ b/MusicStore/PresentationLayer/pgCustomerDetails.xaml
@@ -48,7 +48,7 @@
         <TextBox x:Name="TxtEmail" IsEnabled="False" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" Height="25" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalAlignment="Top" Width="185" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2" Margin="23,0,0,0"/>
         <Label Content="Email" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0 0 0 0" Margin="23,25,0,0" Width="185"/>
 
-        <xctk:MaskedTextBox x:Name="TxtPhoneNumber" Mask="(000) 000-0000" ValueDataType="{x:Type s:String}" IsEnabled="False" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" Height="25" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalAlignment="Top" Width="185" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2" Margin="23,0,0,0" />
+        <xctk:MaskedTextBox x:Name="TxtPhoneNumber" Mask="(000) 000-0000" ValueDataType="{x:Type s:String}" IncludeLiteralsInValue="False" IsEnabled="False" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" Height="25" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalAlignment="Top" Width="185" Padding="0 0 0 0" BorderBrush="Black" BorderThickness="2 2 2 2" Margin="23,0,0,0" />
         <Label Content="Phone Number" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="3" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="0 0 0 0" Margin="23,25,0,0" Width="185"/>
 
         <Label Content="Transactions (Double click to view details)" Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="3" Margin="20,0,0,84"/>
@@ -62,9 +62,9 @@
                     <ColumnDefinition Width="540"/>
                     <ColumnDefinition Width="90"/>
                 </Grid.ColumnDefinitions>
-                <Button x:Name="BtnBack" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Content="Back"/>
-                <Button x:Name="BtnEdit" Width="90" FontSize="15" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Content="Edit"/>
-                <Button x:Name="BtnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="3" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Visibility="Hidden" Margin="1,0,-25,0" />
+                <Button x:Name="BtnBack" Width="90" FontSize="15" Grid.Column="0" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Content="Back" Click="BtnBack_Click"/>
+                <Button x:Name="BtnEdit" Width="90" FontSize="15" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Left" BorderThickness="0" Background="LightGray" Content="Edit" Click="BtnEdit_Click"/>
+                <Button x:Name="BtnSave" HorizontalAlignment="Left" Height="30" Width="105" FontSize="15" Grid.Column="3" Padding="1,1,1,1" Content="Save" BorderThickness="0" Background="LightGray" Visibility="Hidden" Margin="1,0,-25,0" Click="BtnSave_Click" />
             </Grid>
         </StackPanel>
     </Grid>
